# hedwig

./: install-opencv-fedora.sh  install-opencv-ubuntu.sh
calib_data/: cam7192.yaml
camutils/: CMakeLists.txt  camera_calibrate.cpp  camera_framerate.cpp  camera_latency.cpp
flight/: CMakeLists.txt  base.hpp  camera_tracking.cpp  camera_tracking.hpp  config.cpp  config.hpp  config.yaml  main.cpp  pid.cpp  util.hpp
flight/arduino/: arduino_serial.cpp  arduino_serial.hpp
pid/: Makefile  pid.cpp
stabilization/: CMakeLists.txt  stabilization.cpp
stabilization/src/: main.cpp
stabilize/: CMakeLists.txt  stabilize.cpp
track/: CMakeLists.txt  pid.hpp  track.cpp
track/arduino/: arduino_send.cpp  arduino_send.hpp
